hphp/hack/test/typecheck/switch_local_type_change_after_return.php.new_exhaustivity.exp
ERROR: File "switch_local_type_change_after_return.php", line 14, characters 3-80:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "switch_local_type_change_after_return.php", line 14, characters 11-11:
  The scrutinee has type `int` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
ERROR: File "switch_local_type_change_after_return.php", line 17, characters 14-15:
Invalid return type (Typing[4110])
  File "switch_local_type_change_after_return.php", line 12, characters 15-17:
  Expected `int`
  File "switch_local_type_change_after_return.php", line 16, characters 12-17:
  But got `string`
